Update notebooks to use snowballing 0.2.0

--- a/Insert.ipynb
+++ b/Insert.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -18,28 +18,39 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "111db18d316c4885bdbcbc25c8c356a3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "Converter(\"bibtex\").browser()"
+    "Converter(\"bibtex\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,36 +61,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "manager = ArticleNavigator(articles=article_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The open provenance model core specification (v1. 1)\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dd8aaa9082bc420dbe0b7f351b4583b8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
-      "text/html": [
-       "<input value='moreau2011b.pdf' style='width: 100%'></input>"
+      "application/javascript": [
+       "$('span:contains(\"# Temp\")').closest('.cell').remove();"
       ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        $('span:contains(\"# Temp\")').closest('.cell').remove();\n",
+       "        var code = IPython.notebook.insert_cell_below('code');\n",
+       "        code.set_text(atob(\"IyBUZW1wCmluc2VydCgnJycnJycpOwpzZXRfYXR0cmlidXRlKCdhY3VuYTIwMTVhJywgJ2FkZHJlc3MnLCAnTmV3IFlvcmssIFVTQScpOwpzZXRfYXR0cmlidXRlKCdhY3VuYTIwMTVhJywgJ3B1Ymxpc2hlcicsICdJRUVFJyk7CnNldF9hdHRyaWJ1dGUoJ2FjdW5hMjAxNWEnLCAnSUQnLCAnYWN1bmEyMDE1YScpOw==\"));\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "$('span:contains(\"# Temp\")').closest('.cell').remove();"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        $('span:contains(\"# Temp\")').closest('.cell').remove();\n",
+       "        var code = IPython.notebook.insert_cell_below('code');\n",
+       "        code.set_text(atob(\"IyBUZW1wCmluc2VydCgnJycnJycpOwpzZXRfYXR0cmlidXRlKCdhY3VuYTIwMTViJywgJ0lEJywgJ2FjdW5hMjAxNWInKTsKc2V0X2F0dHJpYnV0ZSgnYWN1bmEyMDE1YicsICdsb2NhbCcsICdBUklaT05BIFNUQVRFIFVOSVZFUlNJVFknKTs=\"));\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "$('span:contains(\"# Temp\")').closest('.cell').remove();"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        $('span:contains(\"# Temp\")').closest('.cell').remove();\n",
+       "        var code = IPython.notebook.insert_cell_below('code');\n",
+       "        code.set_text(atob(\"IyBUZW1wCmluc2VydCgnJycnJycpOwpzZXRfYXR0cmlidXRlKCdhY3VuYTIwMTViJywgJ0lEJywgJ2FjdW5hMjAxNWInKTsKc2V0X2F0dHJpYnV0ZSgnYWN1bmEyMDE1YicsICdsb2NhbCcsICdBUklaT05BIFNUQVRFIFVOSVZFUlNJVFknKTs=\"));\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "$('span:contains(\"# Temp\")').closest('.cell').remove();"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        $('span:contains(\"# Temp\")').closest('.cell').remove();\n",
+       "        var code = IPython.notebook.insert_cell_below('code');\n",
+       "        code.set_text(atob(\"IyBUZW1wCmluc2VydCgnJycnJycpOwpzZXRfYXR0cmlidXRlKCdhY3VuYTIwMTViJywgJ0lEJywgJ2FjdW5hMjAxNWInKTsKc2V0X2F0dHJpYnV0ZSgnYWN1bmEyMDE1YicsICdsb2NhbCcsICdBUklaT05BIFNUQVRFIFVOSVZFUlNJVFknKTs=\"));\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
       ]
      },
      "metadata": {},
@@ -87,12 +192,12 @@
     }
    ],
    "source": [
-    "manager.browser()"
+    "ArticleNavigator(articles=article_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +205,7 @@
    "source": [
     "# Temp\n",
     "insert('''''');\n",
-    "set_attribute('moreau2011b', 'ID', 'moreau2011b');"
+    "set_attribute('acuna2015b', 'ID', 'acuna');\n"
    ]
   },
   {
@@ -129,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   },
   "toc": {
    "nav_menu": {
