--- a/Validate.ipynb
+++ b/Validate.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import database\n",
@@ -30,10 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -41,7 +37,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,9 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -82,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -128,9 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -163,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -199,9 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -235,9 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -274,7 +258,6 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -315,7 +298,6 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -351,7 +333,6 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -388,19 +369,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "3"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,28 +397,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ops. It requires a captcha!\n",
-      "If you filled in the browser, type '<ok>' here.\n",
-      "Captcha: <ok>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[ INFO]  settings applied\n"
-     ]
-    }
-   ],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "if worklist and querier is None:\n",
     "    querier = SeleniumScholarQuerier()\n",
@@ -447,23 +408,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dumville1994a False\n",
-      "Ops. It requires a captcha!\n",
-      "If you filled in the browser, type '<ok>' here.\n",
-      "Captcha: <ok>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from snowballing.snowballing import ScholarUpdate\n",
     "supdate = ScholarUpdate(querier, worklist, force=False)"
@@ -471,49 +420,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "oliveira2017a <unknown>\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "05e974c31f7e46049899e8371af4903b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "supdate.browser()"
+    "supdate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Temp\n",
-    "set_attribute('wohlin2014a', 'name', 'Guidelines for snowballing in systematic literature studies and a replication in software engineering')\n",
-    "set_attribute('wohlin2014a', 'entrytype', 'inproceedings')\n",
-    "set_attribute('wohlin2014a', 'pp', '38')\n",
-    "set_attribute('wohlin2014a', 'scholar', 'http://scholar.google.com/scholar?cites=8727281463705144333&as_sdt=5,33&sciodt=0,33&hl=en')\n",
-    "set_attribute('wohlin2014a', 'cluster_id', '8727281463705144333')\n",
-    "set_attribute('wohlin2014a', 'organization', 'ACM')\n",
-    "set_attribute('wohlin2014a', 'scholar_ok', True)\n",
+    "set_attribute('murta2014a', 'scholar', 'http://scholar.google.com/scholar?cites=5458343950729529273&as_sdt=5,33&sciodt=0,33&hl=en')\n",
     "None"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -542,9 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -592,9 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -632,9 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -654,9 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -692,9 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -766,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   },
   "toc": {
    "nav_menu": {
