Add changes based on authors' replies

--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -520,7 +520,7 @@
        "      <th>RDataTracker</th>\n",
        "      <td>RDataTracker</td>\n",
        "      <td></td>\n",
-       "      <td>DDG, Functions</td>\n",
+       "      <td>DDG, PROV, Functions</td>\n",
        "      <td>✗</td>\n",
        "      <td>✓</td>\n",
        "      <td>✗</td>\n",
@@ -743,35 +743,35 @@
        "YesWorkflow                                 YesWorkflow               Datalog   \n",
        "YW*NW                                             YW*NW               Datalog   \n",
        "\n",
-       "                                        Query Vis. Place Vis. Place  \\\n",
-       "Approach                             Specific   Internal   External   \n",
-       "Astro-WISE                     Functions, Web          ✓          ✗   \n",
-       "Becker and Chambers                 Functions          ✓          ✗   \n",
-       "Bochner, Gude, and Schreiber              Web          ✗          ✗   \n",
-       "CPL                                 Functions          ✗          ✗   \n",
-       "CXXR                                Functions          ✗          ✗   \n",
-       "Datatrack                                              ✓          ✗   \n",
-       "ES3                                                    ✓          ✗   \n",
-       "ESSW                                      Web          ✓          ✗   \n",
-       "IncPy                                                  ✗          ✗   \n",
-       "Lancet                                                 ✗          ✗   \n",
-       "Magni                                                  ✗          ✗   \n",
-       "Michaelides et al.                       PROV          ✗          ✓   \n",
-       "noWorkflow                     Functions, Web          ✓          ✗   \n",
-       "Provenance Curious                  Functions          ✓          ✗   \n",
-       "pypet                                                  ✗          ✗   \n",
-       "RDataTracker                   DDG, Functions          ✗          ✓   \n",
-       "Sacred                                    Web          ✓          ✓   \n",
-       "SisGExp                                   Web          ✓          ✗   \n",
-       "SPADE                         PROV, Functions          ✓          ✓   \n",
-       "StarFlow                       Functions, OPM          ✗          ✓   \n",
-       "Sumatra                          Command, Web          ✓          ✗   \n",
-       "Variolite                             Command          ✓          ✗   \n",
-       "VCR                                       Web          ✓          ✗   \n",
-       "versuchung                          Functions          ✗          ✗   \n",
-       "WISE                                                   ✓          ✗   \n",
-       "YesWorkflow                              PROV          ✓          ✓   \n",
-       "YW*NW                                                  ✓          ✗   \n",
+       "                                             Query Vis. Place Vis. Place  \\\n",
+       "Approach                                  Specific   Internal   External   \n",
+       "Astro-WISE                          Functions, Web          ✓          ✗   \n",
+       "Becker and Chambers                      Functions          ✓          ✗   \n",
+       "Bochner, Gude, and Schreiber                   Web          ✗          ✗   \n",
+       "CPL                                      Functions          ✗          ✗   \n",
+       "CXXR                                     Functions          ✗          ✗   \n",
+       "Datatrack                                                   ✓          ✗   \n",
+       "ES3                                                         ✓          ✗   \n",
+       "ESSW                                           Web          ✓          ✗   \n",
+       "IncPy                                                       ✗          ✗   \n",
+       "Lancet                                                      ✗          ✗   \n",
+       "Magni                                                       ✗          ✗   \n",
+       "Michaelides et al.                            PROV          ✗          ✓   \n",
+       "noWorkflow                          Functions, Web          ✓          ✗   \n",
+       "Provenance Curious                       Functions          ✓          ✗   \n",
+       "pypet                                                       ✗          ✗   \n",
+       "RDataTracker                  DDG, PROV, Functions          ✗          ✓   \n",
+       "Sacred                                         Web          ✓          ✓   \n",
+       "SisGExp                                        Web          ✓          ✗   \n",
+       "SPADE                              PROV, Functions          ✓          ✓   \n",
+       "StarFlow                            Functions, OPM          ✗          ✓   \n",
+       "Sumatra                               Command, Web          ✓          ✗   \n",
+       "Variolite                                  Command          ✓          ✗   \n",
+       "VCR                                            Web          ✓          ✗   \n",
+       "versuchung                               Functions          ✗          ✗   \n",
+       "WISE                                                        ✓          ✗   \n",
+       "YesWorkflow                                   PROV          ✓          ✓   \n",
+       "YW*NW                                                       ✓          ✗   \n",
        "\n",
        "                             Visualization Visualization Visualization  \\\n",
        "Approach                           Process          Data      Combined   \n",
@@ -973,7 +973,8 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "code_folding": []
+    "code_folding": [],
+    "collapsed": true
    },
    "outputs": [],
    "source": [
