--- a/notebooks/Goals.ipynb
+++ b/notebooks/Goals.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "{Framework, Management, Comprehension, Caching, Reproducibility}"
+       "{Comprehension, Framework, Management, Caching, Reproducibility}"
       ]
      },
      "execution_count": 2,
@@ -65,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from database.groups import YES, NO\n",
@@ -604,7 +606,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open('../../csur/bibliography.bib') as bibtex_file:\n",
@@ -624,7 +628,7 @@
     {
      "data": {
       "text/plain": [
-       "{Security, Framework, Management, Comprehension, Caching, Reproducibility}"
+       "{Security, Comprehension, Framework, Management, Caching, Reproducibility}"
       ]
      },
      "execution_count": 10,
@@ -643,7 +647,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import re\n",
@@ -668,7 +674,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "total = (\n",
@@ -711,7 +719,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "RENAME = {\n",
@@ -739,7 +749,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "result = []\n",
@@ -753,7 +765,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "latex = header + \"\\n\" + \"\\n\".join(result) + \"\\n\" + footer\n",
