--- a/notebooks/Languages.ipynb
+++ b/notebooks/Languages.ipynb
@@ -63,7 +63,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "languages = defaultdict(list)\n",
@@ -111,7 +113,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "columns = [\"Language\", \"Count\", \"Approaches\"]\n",
@@ -124,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "header = r\"\"\"\\begin{tabular}{c c m{0.7\\textwidth}}\n",
@@ -143,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "result = []\n",
@@ -157,7 +165,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "latex = header + \"\\n\" + \"\\n\".join(result) + \"\\n\" + footer\n",
