--- a/notebooks/ManagementAnalysis.ipynb
+++ b/notebooks/ManagementAnalysis.ipynb
@@ -47,14 +47,7 @@
     {
      "data": {
       "text/plain": [
-       "{'Command',\n",
-       " 'Function Calls',\n",
-       " 'Functions',\n",
-       " 'Interoperable Format',\n",
-       " 'PROV',\n",
-       " 'Proprietary',\n",
-       " 'Query',\n",
-       " 'Web'}"
+       "{'Command', 'Functions', 'Interoperable Format', 'Proprietary', 'Query', 'Web'}"
       ]
      },
      "execution_count": 2,
@@ -92,7 +85,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from database.groups import REPRODUCIBILITY\n",
@@ -273,7 +268,7 @@
        "      <th>Datatrack</th>\n",
        "      <td>VCS, Proprietary (CSV)</td>\n",
        "      <td>Version Control System, Proprietary (CSV)</td>\n",
-       "      <td>Trial Sequence</td>\n",
+       "      <td>Trial Identification</td>\n",
        "      <td>Data View</td>\n",
        "      <td>Clustering (Combines all data accesses in nodes)</td>\n",
        "      <td>✗</td>\n",
@@ -373,10 +368,10 @@
        "      <th>RDataTracker</th>\n",
        "      <td>Interoperable Format (PROV)</td>\n",
        "      <td>Interoperable Format (PROV)</td>\n",
-       "      <td>Trial Sequence</td>\n",
+       "      <td>Trial Identification</td>\n",
        "      <td>Combined View (DDG)</td>\n",
        "      <td>Filtering, Clustering</td>\n",
-       "      <td>PROV, Function Calls, Proprietary (DDG)</td>\n",
+       "      <td>Interoperable Format (PROV), Functions, Propri...</td>\n",
        "      <td>[Provenance]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -406,7 +401,7 @@
        "      <td>✗</td>\n",
        "      <td>Proprietary (SPADE), Interoperable Format (PRO...</td>\n",
        "      <td>Filtering, Clustering</td>\n",
-       "      <td>Interoperable Format (PROV)</td>\n",
+       "      <td>Query (SQL, Cypher, Datalog), Interoperable Fo...</td>\n",
        "      <td>[Provenance]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -456,7 +451,7 @@
        "      <td>*opt. VCS</td>\n",
        "      <td>✗</td>\n",
        "      <td>✗</td>\n",
-       "      <td>Functions</td>\n",
+       "      <td>Functions, Query (SQL)</td>\n",
        "      <td>[VCS]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -561,7 +556,7 @@
        "Bochner, Gude, and Schreiber                     ✗   \n",
        "CPL                           Trial Identification   \n",
        "CXXR                                             ✗   \n",
-       "Datatrack                           Trial Sequence   \n",
+       "Datatrack                     Trial Identification   \n",
        "ES3                                              ✗   \n",
        "ESSW                                           *ID   \n",
        "IncPy                                            ✗   \n",
@@ -571,7 +566,7 @@
        "noWorkflow                     Evolution Intention   \n",
        "Provenance Curious                               ✗   \n",
        "pypet                         *opt. Sumatra or VCS   \n",
-       "RDataTracker                        Trial Sequence   \n",
+       "RDataTracker                  Trial Identification   \n",
        "Sacred                         Individual versions   \n",
        "SisGExp                                          ✗   \n",
        "SPADE                                            ✗   \n",
@@ -661,15 +656,15 @@
        "noWorkflow                    Query (SQL, Prolog, Python), Functions, Web (J...   \n",
        "Provenance Curious            Functions (Input values and debug model), Quer...   \n",
        "pypet                                                                         ✗   \n",
-       "RDataTracker                            PROV, Function Calls, Proprietary (DDG)   \n",
+       "RDataTracker                  Interoperable Format (PROV), Functions, Propri...   \n",
        "Sacred                                         Web, Query (SQL, Prolog, Python)   \n",
        "SisGExp                                                        Query (SQL), Web   \n",
-       "SPADE                                               Interoperable Format (PROV)   \n",
+       "SPADE                         Query (SQL, Cypher, Datalog), Interoperable Fo...   \n",
        "StarFlow                      Functions (Navigation, Cache), Interoperable F...   \n",
        "Sumatra                       Command (Annotations), Query (SQL), Web (Textu...   \n",
        "Variolite                                                               Command   \n",
        "VCR                                                                 Web (Links)   \n",
-       "versuchung                                                            Functions   \n",
+       "versuchung                                               Functions, Query (SQL)   \n",
        "WISE                                                                          ✗   \n",
        "YesWorkflow                        Interoperable Format (PROV), Query (Datalog)   \n",
        "YW*NW                                                           Query (Datalog)   \n",
